# sb-report-analyzer

./: .gitignore  README.md  app.py  config.py  main.py  models.py  pdf_loader.py  pipeline.py  prompts.py  pyproject.toml  rag.py  vector_store.py
output/: results.json
tests/: conftest.py  test_config.py  test_models.py  test_pdf_loader.py  test_pipeline.py  test_rag.py
